Money values are right aligned, added README.txt for user credentials, fixed dates

--- a/css/style.css
+++ b/css/style.css
@@ -486,3 +486,7 @@ input[type="checkbox"]:checked:after {
 #joForm > div:nth-child(21) > div.controls.col-md-6 > span > input.tt-hint{
     width: 100%;
 }*/
+
+.input-right{
+   text-align:right;
+}
